--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,7 +2,7 @@
 <ion-content>
      <div class="container">
        <div class="top_pic_div">
-         <img src="./login_ic.png" class="top_pic">
+         <img src="http://img.funshion.com/pictures/134/218/7/1342187.jpg" class="top_pic">
        </div>
        <div class="form">
          <ion-item style="width: 100%;">
